# design_patterns

./: README.md  pyproject.toml
config/prod/: configs.json
config/test/: configs.json
design_patterns/dataclasses/: aws_client_strategy.py  config.py  email_notification.py  push_notification.py  sms_notification.py
design_patterns/factory_method/: email_notification.py  notification.py  push_notification.py  sms_notification.py
design_patterns/models/: notification.py  sms_notification.py
design_patterns/singleton/: config.py
design_patterns/strategy/: aws_client_strategy.py  ses_client.py  sns_client.py
tests/: base_test_case.py
tests/factory_method/: test_email_notification.py  test_push_notification.py  test_sms_notification.py
tests/singleton/: test_config.py
